--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "sen10_mod12",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "lint": "eslint .",
+    "test": "jest --passWithNoTests",
+    "deploy": "echo '🚀 Deploying only after successful lint & test...'"
+  },
   "devDependencies": {
     "eslint": "^9.38.0",
-    "@eslint/js": "^9.38.0"
+    "@eslint/js": "^9.38.0",
+    "jest": "^29.7.0"
   }
 }
