--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "sen10_mod12",
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "lint": "eslint .",
-    "test": "jest --passWithNoTests",
-    "deploy": "echo '🚀 Deploying only after successful lint & test...'"
-  },
+"scripts": {
+  "lint": "eslint .",
+  "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
+  "deploy": "echo '🚀 Deploying only after successful lint & test...'"
+},
   "devDependencies": {
     "eslint": "^9.38.0",
     "@eslint/js": "^9.38.0",
